# omero-bifrost

./: .gitignore  LICENSE  README.md  bifrost_conda_env.yaml  conda_env.yaml  requirements.txt  setup.cfg
.github/workflows/: deploy-pypi.yml
src/omero_bifrost/: __init__.py  cli.py
src/omero_bifrost/pull/: pull_ops.py
src/omero_bifrost/push/: push_ops.py
src/omero_bifrost/query/: query_ops.py
src/omero_bifrost/utils/: util_ops.py
