[metadata]
name = omero-bifrost
version = attr: omero_bifrost.__version__
url = https://github.com/luiskuhn/omero-bifrost
author = Luis Kuhn Cuellar
author_email = luis.kuhn@gmail.com
description = Bifrost bridge for large-scale transfer of OMERO-stored bioimage data
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    =src
python_requires = >= 3.8
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    omero-bifrost = omero_bifrost.cli:app

[options.packages.find]
where = src
